# AnimalFace

./: .gitignore  README.md  build.gradle  gradle.properties  local.properties
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: birds_200-sim-opt-fp16.param
app/src/main/java/com/tencent/yolov8ncnn/: ImageSelectActivity.java  MainActivity.java  NcnnModel.java  Yolov8Ncnn.java
app/src/main/java/org/cwcc/ani/ai/: AniApplication.java  ModelInfo.java
app/src/main/java/org/cwcc/ani/ai/activities/: ImageSelectActivity.java  MainActivity.java
app/src/main/java/org/cwcc/ani/ai/exceptions/: CalledFromWorkerThreadException.java
app/src/main/java/org/cwcc/ani/ai/log/: Logger.java  LoggerDefinition.java
app/src/main/java/org/cwcc/ani/ai/model/: AniAI.java  AniAIModel.java  AniModelResult.java  ModelInfo.java  ModelResult.java  YoloModel.java  Yolov8Model.java
app/src/main/java/org/cwcc/ani/ai/utils/: LibraryLoader.java  ThreadUtils.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/ani/: AniAI.cpp  AniAI.hpp  AniAIModel.cpp  AniAIModel.hpp  YoloModel.cpp  YoloModel.hpp  ani_jni.cpp  ani_jni.hpp  java_types.cpp  java_types.hpp  jni_native.cpp  jni_native.hpp  yolo.cpp  yolo.h  yolov8ncnn.cpp
app/src/main/jni/ani/android/: thread.cpp
app/src/main/jni/ani/model/: ModelInfo.cpp  ModelInfo.hpp  ModelInfo_JNI.cpp  ModelInfo_JNI.hpp  ModelResult.cpp  ModelResult.hpp  image.hpp
app/src/main/jni/ani/model/android/: AniModelResult.cpp  AniModelResult.hpp  Bitmap.cpp  Bitmap.hpp  ModelInfo.cpp  ModelInfo.hpp  ModelInfo.rar  ModelResult.cpp  ModelResult.hpp  asset_manager.hpp  attach_env.cpp  attach_env.hpp
app/src/main/jni/ani/model/android/conversion/: collection.cpp  collection.hpp  conversion.cpp  conversion.hpp
app/src/main/jni/ani/platform/: thread.hpp
app/src/main/jni/ani/utils/: anindkcamera.cpp  anindkcamera.hpp  cvimageutils.cpp  cvimageutils.hpp  event.hpp  logging.hpp  noncopyable.hpp  platform.hpp  point.hpp  size.hpp  utils.cpp  utils.hpp
app/src/main/res/layout/: image_select.xml  main.xml
app/src/main/res/values/: strings.xml
gradle/: dependencies.gradle
gradle/wrapper/: gradle-wrapper.properties
